style improvements fixing shakes, wiggles, and weird spacing in the widget

--- a/rb/static/widget/css/widget.css
+++ b/rb/static/widget/css/widget.css
@@ -6,7 +6,7 @@
     font-variant:normal !important;
     font-style:normal !important;
     border:0;;
-    line-height:1.1em;;
+    line-height:1em;;
     letter-spacing:normal;;
     width:auto;;
     text-indent:0;;
@@ -338,7 +338,9 @@ div.rdr_sandbox div.rdr div.rdr_body div.jspPane   { margin:0 !important; }
 div.rdr_sandbox div.rdr div.jspScrollable   { outline:none!important; }
 
 div.rdr_sandbox div.rdr div.rdr_body div.jspHorizontalBar  { display:none;; }
-div.rdr_sandbox div.rdr div.rdr_body div.jspVerticalBar    { z-index:10001 !important; right:4px !important; }
+div.rdr_sandbox div.rdr div.rdr_body div.jspVerticalBar    { z-index:10001 !important; right:1px !important; opacity: .5 !important;}
+div.rdr_sandbox div.rdr div.rdr_body div.jspDrag    { cursor: default !important; }
+
 div.rdr_sandbox div.rdr_indicator_details_for_media div.rdr_body div.jspVerticalBar {
     margin-left:-17px !important;
     right:11px !important;
@@ -449,7 +451,7 @@ div.rdr_sandbox div.rdr div.rdr_share_social                   { overflow:visibl
 div.rdr_sandbox div.rdr div.rdr_share_social strong            { display:block !important; float:left !important; margin:5px 5px 0 24px !important; }
 div.rdr_sandbox div.rdr div.rdr_commentBox                     { clear:both !important; display:block !important; padding-top:5px !important; max-width:92% !important; text-align:left !important;margin-left:5px !important;}
 
-div.rdr_sandbox div.rdr div.rdr_back { position:relative !important; z-index:1 !important; background:#aaa !important; font-size:9px !important; text-transform:uppercase !important; color:#fff !important; cursor:pointer !important; padding: 2px 12px !important; margin-bottom:4px !important;text-align:left !important;}
+div.rdr_sandbox div.rdr div.rdr_back { position:relative !important; z-index:1 !important; background:#aaa !important; font-size:9px !important; text-transform:uppercase !important; color:#fff !important; cursor:pointer !important; padding: 5px 12px 2px 12px !important; margin-bottom:4px !important;text-align:left !important;}
 div.rdr_sandbox div.rdr_indicator_details_for_media div.rdr_body div.rdr_back { }
 div.rdr_sandbox div.rdr div.rdr_back.rdr_hide { margin-top:-10px !important; }
 
@@ -543,14 +545,20 @@ div.rdr a.rdr_tag     {
     font-size: 13px !important;
     font-style: normal !important;
     font-weight: bold !important;
-    height: 23px !important;
-    margin: 0 -2px 0 -2px !important;
-    padding: 12px 7px 4px !important;
+    height: 34px !important;
+    padding: 8px !important;
     position: relative !important;
     text-decoration: none !important;
     text-transform: none !important;
     /*white-space: nowrap !important;*/
     z-index:10001 !important;
+    /*width: 100% !important;*/
+    text-align: left !important;
+    vertical-align: middle !important;
+    -webkit-box-sizing : border-box !important;
+    -moz-box-sizing : border-box !important;
+    -o-box-sizing : border-box !important;
+    box-sizing : border-box !important;
 }
 div.rdr.rdr-summary a.rdr_tag {
   font-size:11px !important;
@@ -577,7 +585,7 @@ div.rdr_sandbox div.rdr_tag_details {
   -moz-box-shadow: 0 1px 2px rgba(128, 128, 128, 0.7) !important;
   box-shadow: 0 1px 2px rgba(128, 128, 128, 0.7) !important;
   border-top:1px solid #ddd !important;
-  padding:4px !important;
+  padding:0px !important;
   display:none;;
 }
 div.rdr_sandbox div.rdr_tag_details.rdr_boomarklet {
@@ -683,15 +691,6 @@ table.rdr_tags span.rdr_comment_hover:hover span.rdr_icon {
     background-position:-482px -14px !important;
 }
 
-table.rdr_tags a.rdr_tag.rdr_custom_tag     {
-    padding: 4px !important;
-    margin:10px 0 0 !important;
-    /*max-width: 85px !important;*/
-}
-div.rdr_indicator_details_for_media table.rdr_tags a.rdr_tag.rdr_custom_tag     {
-  /*margin:9px 0 0 0 !important;*/
-}
-
 table.rdr_tags a.rdr_tag span.rdr_tag_count {
 }
 table.rdr_tags span.rdr_comment_indicator {
@@ -736,7 +735,15 @@ div.rdr a.rdr_tag span.rdr_tag_count    {
     margin-left: 0px !important;
 }
 
-div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input, div.rdr a.rdr_tag.rdr_custom_tag input{
+table.rdr_tags a.rdr_tag.rdr_custom_tag     {
+    padding: 0px !important;
+    /*match padding of div.rdr a.rdr_tag -- use margin instead so it's not clickable*/
+    margin: 8px !important;
+    height: auto !important;
+}
+
+div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input,
+div.rdr a.rdr_tag.rdr_custom_tag input{
     background: transparent !important;
     border: 0 !important;
     -webkit-box-shadow:none !important;
@@ -746,13 +753,22 @@ div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input, div.rdr a.rdr_tag.rdr_cu
     font-size:13px !important;
     padding: 0px !important;
     max-width: 90px !important;
+    cursor: pointer !important;
+    margin-top: 3px !important;
 }
 
-div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag:hover input, div.rdr a.rdr_tag.rdr_custom_tag:hover input,
-div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input:focus, div.rdr a.rdr_tag.rdr_custom_tag input:focus {
-  color:#454545 !important;
-  font-weight:bold !important;
+div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag:hover input,
+div.rdr a.rdr_tag.rdr_custom_tag:hover input,
+div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input:focus,
+div.rdr a.rdr_tag.rdr_custom_tag input:focus {
+    color:#454545 !important;
 }
+
+div.rdr_sandbox div.rdr a.rdr_tag.rdr_custom_tag input:focus,
+div.rdr a.rdr_tag.rdr_custom_tag input:focus {
+    cursor: default !important;
+}
+
 
 div.rdr a.rdr_tag.rdr_custom_tag input.rdr_default {
     font-style: italic !important;
@@ -914,6 +930,15 @@ div.rdr.rdr-summary div.rdr-sum-reactions a.rdr_reactToArticle {
   font-size:11px !important;
   padding-left:5px !important;
 }
+
+div.rdr.rdr-summary div.rdr-sum-reactions a.rdr_reactToArticle:hover {
+  background: none !important;
+}
+div.rdr.rdr-summary div.rdr-sum-reactions a.rdr_reactToArticle span{
+    top: 4px !important;
+    position: relative !important;
+}
+
 div.rdr.rdr-summary div.rdr-sum-reactions a {
   display:inline-block !important;
   border-top:0 none !important;
@@ -965,6 +990,7 @@ div.rdr_sandbox div.rdr.rdr_tag_details.rdr_sbRollover {
   text-align:left !important;
   max-height:350px !important;
   overflow-y:auto !important;
+  padding-top: 5px !important;
 }
 div.rdr_sandbox div.rdr.rdr_tag_details.rdr_sbRollover h1, div.rdr_sandbox div.rdr.rdr_tag_details.rdr_sbRollover h2 {
   margin-bottom:5px !important;
@@ -1201,7 +1227,10 @@ div.rdr_shareWidget .rdr_innerWrap ul li{
     padding: 0 !important;
     margin: 0 !important;
     background: none !important;
-    box-sizing: border-box !important;
+    -webkit-box-sizing : border-box !important;
+    -moz-box-sizing : border-box !important;
+    -o-box-sizing : border-box !important;
+    box-sizing : border-box !important; 
 }
 div.rdr_socialShareWrap.locateWithSummaryWidget div.rdr_shareWidget .rdr_innerWrap ul li{
     margin: 10px !important;
